# in-the-loop

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  TEST_RESULTS.md  index.html  package-lock.json  package.json  release-please-config.json  vite.config.ts
.github/skills/release-app/: SKILL.md
.github/workflows/: release.yml
scripts/: loop-track.sh
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: create_icon.py  icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  local_server.rs  main.rs  mcp.rs  polling.rs  shortcut.rs  tray.rs  updater.rs
src-tauri/src/services/: copilot_cli.rs  github_actions.rs  github_pr.rs  github_repo.rs  mod.rs  opencode.rs  slack.rs  url_parser.rs
src/components/: AddItemForm.tsx  AddTodoForm.tsx  BindPopover.tsx  ContextMenu.tsx  Dashboard.tsx  ItemCard.tsx  Settings.tsx  StatusBadge.tsx  TodoCard.tsx  TodoList.tsx  UpdatePrompt.tsx
src/styles/: index.css
