[package]
name = "in-the-loop"
version = "0.12.0"
description = "Local-only desktop app for macOS to stay in the loop on async work items"
authors = ["you"]
edition = "2021"
default-run = "in-the-loop"

[lib]
name = "in_the_loop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mcp-server"
path = "src/bin/mcp-server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-window-state = "2"
core-foundation = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
regex = "1"
urlencoding = "2"
url = "2"
base64 = "0.22"
axum = "0.7"
tower = "0.5"
dirs = "6.0.0"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
